Flexbox layout on labels was preventing text wrapping in IE, and offers no advantage over block AB#109665

--- a/packages/forms/src/elements/elements.module.scss
+++ b/packages/forms/src/elements/elements.module.scss
@@ -16,7 +16,7 @@ fieldset {
 }
 
 .label {
-	display: flex;
+	display: block;
 	cursor: default;
 }
 
